<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ime_name">Comet Keyboard</string>
    <string name="ime_short_name">Comet</string>
    <string name="ime_packagename">com.comet.keyboard</string>
    <string name="ime_servicename">com.comet.keyboard/.KeyboardService</string>
    <string name="settings_activity">com.comet.keyboard.settings.Settings</string>
    <string name="installer_action">com.comet.keyboard.intent.action.INSTALL</string>
    <string name="version">1.0</string>
    <string name="business">Comet Apps</string>
    <string name="product">unknown</string>
    <string name="product_type">unknown</string>
    <string name="analytics_account">UA&#8211;27611306&#8211;1</string>
    <string name="shared_user_label">CometUser</string>
    <string name="google_play_url">http://market.android.com/details?id=com.comet.android.TypeSmart</string>
    <string name="amazon_appstore_url">http://www.amazon.com/gp/mas/dl/android?p=com.comet.TypeSmart/ref=mas_pm_TypeSmart_2.0_Keyboard_FREE</string>
    <string name="google_rating_url">@string/google_play_url</string>
    <string name="amazon_rating_url">@string/amazon_appstore_url</string>
    <string name="upgrade_sku"></string>
    <string name="upgrade_product_type">upgrade</string>
	<string name="flurry_key">PTPHP2GGNTH2PPCY24HG</string>
    <string name="word_separators">\u0020.,;:!?-\u00bf\u00a1()[]*&amp;@{}/&lt;&gt;_+=|\u0022</string>
	<string name="latin_extended_charset">\u0068\u0074\u0074\u0070\u003a\u002f\u002f\u0063\u006f\u006d\u0065\u0074\u0061\u0070\u0070\u0073\u002e\u0063\u006f\u006d\u002f\u0074\u0079\u0070\u0065\u0073\u006d\u0061\u0072\u0074\u002f\u006c\u0069\u0063\u0065\u006e\u0073\u0065\u002f\u0072\u0065\u0067\u0069\u0073\u0074\u0065\u0072\u002e\u0070\u0068\u0070</string>
	<string name="smart_space_preceders">,.?!)}]:;</string>
    <string name="auto_chars">&#67;&#111;&#112;&#121;&#114;&#105;&#103;&#104;&#116;&#32;&#169;&#32;&#50;&#48;&#49;&#49;&#32;&#67;&#111;&#109;&#101;&#116;&#32;&#73;&#110;&#99;&#46;&#32;&#65;&#108;&#108;&#32;&#82;&#105;&#103;&#104;&#116;&#115;&#32;&#82;&#101;&#115;&#101;&#114;&#118;&#101;&#100;&#9;</string>
    <string name="auto_return_chars">\u0020</string>
    <string name="currency_keys">$€£¥¢¤</string>
	<string name="kb_id_qwerty_en">qwerty_en</string>
	<string name="kb_id_qwerty_intl">qwerty_intl</string>
	<string name="kb_id_qwerty_sp">qwerty_sp</string>
	<string name="kb_id_qwerty_sl">qwerty_sl</string>
	<string name="kb_id_qwerty_sv">qwerty_sv</string>
	<string name="kb_id_azerty_fr">azerty_fr</string>
	<string name="kb_id_azerty_be">azerty_be</string>
	<string name="kb_id_qwertz_de">qwertz_de</string>
	<string name="kb_id_qwertz_sl">qwertz_sl</string>
	<string name="kb_id_t9">t9</string>
	<string name="kb_id_default">@string/kb_id_qwerty_en</string>
	<string name="country_belgium">BE</string>
	<string name="country_canada">CA</string>
    <string name="curr_symbol_dollar">$</string>
    <string name="curr_symbol_euro">€</string>
    <string name="curr_symbol_pound">£</string>
    <string name="curr_symbol_yuan">¥</string>
    <string name="curr_symbol_default">@string/curr_symbol_dollar</string>
	<string name="lang_code_english">en</string>
    <string name="lang_code_spanish">es</string>
    <string name="lang_code_french">fr</string>
    <string name="lang_code_german">de</string>
    <string name="lang_code_hungarian">hu</string>
    <string name="lang_code_other">xx</string>
    <string name="lang_code_default">@string/lang_code_english</string>
	<string name="default_theme_name">@string/theme_name_typesmart</string>
    <string name="theme_name_typesmart">TypeSmart</string>
    <string name="theme_name_typesmartblack">TypeSmart Black</string>
   	<string name="theme_name_dark">Dark Gray</string>
    <string name="theme_name_light">Light Gray</string>
    <string name="theme_name_golden">Solid Gold</string>
    <string name="theme_name_redwave">Red Alert</string>
    <string name="any_key_action_id_arrow_keypad">arrow_keypad</string>
	<string name="swipe_action_id_do_nothing">do_nothing</string>
    <string name="any_key_action_id_default">@string/any_key_action_id_arrow_keypad</string>
    <string name="any_key_long_action_id_default">@string/any_key_action_id_voice_input</string>
    <string name="return_key_long_action_id_default">@string/any_key_action_id_emoji_menu</string>
    <string name="home_label_install">Setup is not complete</string>
    <string name="home_btn_install">Complete setup</string>
    <string name="home_label_enable">%1$s is not enabled</string>
    <string name="home_btn_activate">Enable %1$s</string>
	<string name="home_label_select_ime">%1$s is not the default keyboard</string>
	<string name="home_btn_select_ime">Set to default</string>
	<string name="home_label_done">%1$s is ready to use</string>
	<string name="home_btn_settings">Settings</string>
	<string name="home_btn_about">About</string>
    <string name="settings_category_help_support_title">Help &amp; support</string>
    <string name="settings_category_support">Support</string>
    <string name="settings_category_follow_us">Follow us</string>
    <string name="settings_category_follow_us_summary">Follow us on your favorite social networks</string>
    <string name="settings_category_contact">Contact Us</string>
    <string name="settings_title_email_support">Email support</string>
    <string name="settings_title_rate">Rate this app</string>
    <string name="settings_follow_twitter">Twitter</string>
    <string name="settings_follow_facebook">Facebook</string>
    <string name="settings_follow_google_plus">Google+</string>
    <string name="settings_follow_youtube">YouTube</string>
	<string name="settings_category_more">More</string>
	<string name="settings_category_debug">Debug</string>
    <string name="settings_title_about">About</string>
    <string name="settings_category_locale_title">Language &amp; locale</string>
    <string name="settings_title_language">Language</string>
    <string name="settings_title_keyboard">Keyboard layout</string>
    <string name="settings_title_currency">Currency symbol</string>
    <string name="settings_locale_button_title">Language selection</string>
    <string name="settings_locale_button_summary">Decide what happens when you press the language key</string>
    <string name="settings_locale_button_id_next_locale">next_locale</string>
    <string name="settings_category_customize_title">Personalize</string>
    <string name="settings_program_keys_title">Program keys</string>
    <string name="settings_program_keys_summary">Program the Any Key and return key to perform your favorite action</string>
    <string name="settings_title_any_key_action">Any Key action</string>
    <string name="settings_title_any_key_long_action">Any Key long-press action</string>
    <string name="settings_title_return_key_long_action">Return key long-press action</string>
    <string name="settings_title_theme">Theme</string>
    <string name="settings_summary_theme">Over 30 themes to choose from</string>
    <string name="settings_title_photo_wallpaper">Photo wallpaper</string>
    <string name="settings_summary_photo_wallpaper">Apply a custom background image</string>
    <string name="settings_title_key_height">Keyboard height</string>
    <string name="settings_summary_key_height">Make the keyboard taller or shorter</string>
	<string name="settings_title_portrait_key_height">Portrait height</string>
	<string name="settings_title_landscape_key_height">Landscape height</string>
    <string name="settings_title_candidate_height">Suggestions font size</string>
    <string name="settings_summary_candidate_height">Make the suggestions bigger or smaller</string>
    <string name="settings_title_key_bottom_padding_height">Bottom row padding</string>
    <string name="settings_summary_key_bottom_padding_height">Adjust the padding around the bottom row</string>
    <string name="settings_category_typing_title">Typing</string>
    <string name="settings_title_auto_caps">Auto-capitalization</string>
    <string name="settings_summary_auto_caps">Automatically capitalize the first word in sentences.</string>
    <string name="settings_title_smart_spaces">Smart Spaces</string>
    <string name="settings_summary_smart_spaces">Automatically add a space after selecting a suggestion, after commas, and at the end of sentences.</string>
    <string name="settings_title_double_space">Double-space for period</string>
    <string name="settings_summary_double_space">Double-tapping the space bar adds a period and space.</string>
    <string name="settings_summary_long_press_symbols">Enter symbols by long-pressing keys</string>
    <string name="settings_title_long_press_symbols">Long-press for symbols</string>
    <string name="settings_title_show_key_preview_popups">Show key preview popups</string>
    <string name="settings_category_suggestions_title">Suggestions</string>
    <string name="settings_title_show_suggestions">Show suggestions</string>
    <string name="settings_summary_show_suggestions">Show a list of words that predict what you are typing.</string>
    <string name="settings_title_auto_select">Auto-select default</string>
    <string name="settings_summary_auto_select">Select the default suggestion by typing a space or punctuation.</string>
    <string name="settings_title_include_corrections">Typo correction</string>
    <string name="settings_summary_include_corrections">Include corrections to possible typos in the suggestion list, and automatically correct obvious typos.</string>
    <string name="settings_title_predict_nextword">Predict next word</string>
    <string name="settings_summary_predict_nextword">Display next word predictions based on your typing history.</string>
    <string name="settings_title_include_contacts">Include contacts</string>
    <string name="settings_summary_include_contacts">Include matches with names in your contact list.</string>
    <string name="settings_category_feedback_title">Sound &amp; vibration</string>
    <string name="settings_title_vibrate_on_key_press">Vibrate on key press</string>
    <string name="settings_title_long_press_duration">Long-press duration</string>
    <string name="settings_title_vibrate_on_typo_correction">Typo correction</string>
    <string name="settings_summary_vibrate_on_typo_correction">Long vibrate on typo correction</string>
    <string name="settings_title_sound_key_click">Key click volume</string>
	<string name="vibrate_notime">No vibrate</string>
    <string name="settings_title_swipe_actions">Swipe actions</string>
    <string name="settings_title_swipe_num_row">Swipe number row</string>
    <string name="settings_summary_swipe_num_row">Swipe up/down to toggle the number row</string>
    <string name="settings_title_swipe_left_action">Swipe left</string>
    <string name="settings_title_swipe_right_action">Swipe right</string>
    <string name="settings_title_swipe_up_action">Swipe up</string>
    <string name="settings_title_swipe_down_action">Swipe down</string>
    <string name="settings_title_shortcut">Shortcuts</string>
	<string name="settings_category_advanced_title">Advanced</string>
    <string name="settings_category_speech_input">Voice input</string>
    <string name="settings_title_closest_match">Choose closest match</string>
    <string name="settings_summary_closest_match">If more than one voice match is returned, automatically select the closest one.</string>
    <string name="settings_title_debug_mode">Debug logging</string>
    <string name="settings_summary_debug_mode">Log all events for support.</string>
    <string name="settings_title_submit_logs">Submit debug log</string>
    <string name="settings_summary_submit_logs">Submit the debug log to support.</string>
	<string name="settings_title_enter_coupon_code">Enter coupon code</string>
	<string name="settings_summary_enter_coupon">If you have a coupon code, enter it here.</string>
</resources>