<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Upgrade -->
<!--     <Preference
        android:icon="@drawable/ic_launcher"
        android:key="upgrade"
        android:selectable="true"
        android:summary="@string/settings_upgrade_description"
        android:title="@string/settings_title_upgrade" />
 -->
    <!-- Help & Support -->
    <PreferenceScreen
        android:key="help_support"
        android:title="@string/settings_category_help_support_title" >
<!--         <PreferenceCategory android:title="@string/settings_category_help" >
            <Preference
                android:key="knowledge_base"
                android:selectable="true"
                android:title="@string/settings_title_tutorials" />
        </PreferenceCategory>
 -->
        <PreferenceCategory android:title="@string/settings_category_support" >
<!--             <Preference
                android:key="open_ticket"
                android:selectable="true"
                android:title="@string/settings_title_open_ticket" />
            <Preference
                android:key="my_tickets"
                android:selectable="true"
                android:title="@string/settings_title_my_ticket" />
 -->
            <Preference
                android:key="email_support"
                android:selectable="true"
                android:title="@string/settings_title_email_support" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/settings_category_contact" >
            <PreferenceScreen
                android:key="key_follow_us"
                android:summary="@string/settings_category_follow_us_summary"
                android:title="@string/settings_category_follow_us" >
                <Preference
                    android:key="key_follow_twitter"
                    android:selectable="true"
                    android:title="@string/settings_follow_twitter" />
                <Preference
                    android:key="key_follow_facebook"
                    android:selectable="true"
                    android:title="@string/settings_follow_facebook" />
                <Preference
                    android:key="key_follow_google_plus"
                    android:selectable="true"
                    android:title="@string/settings_follow_google_plus" />
                <Preference
                    android:key="key_follow_youtube"
                    android:selectable="true"
                    android:title="@string/settings_follow_youtube" />
            </PreferenceScreen>

<!--             <Preference
                android:key="community"
                android:selectable="true"
                android:summary="@string/settings_summary_community"
                android:title="@string/settings_title_community" />
 -->            
       </PreferenceCategory>
        <PreferenceCategory android:title="@string/settings_category_more" >
            <Preference
                android:key="rate_app"
                android:selectable="true"
                android:title="@string/settings_title_rate" />
<!--             <Preference
                android:key="survey"
                android:selectable="true"
                android:summary="@string/settings_survey_description"
                android:title="@string/settings_title_take_our_survey" />
 -->
            <Preference
                android:key="about"
                android:selectable="true"
                android:title="@string/settings_title_about" />
        </PreferenceCategory>
    </PreferenceScreen>

    <!-- Locale -->
    <PreferenceScreen android:title="@string/settings_category_locale_title" >
        <Preference
            android:defaultValue="@string/lang_code_default"
            android:key="language"
            android:title="@string/settings_title_language" />
        <Preference
            android:defaultValue="@string/kb_id_default"
            android:key="keyboard"
            android:title="@string/settings_title_keyboard" />
        <ListPreference
            android:defaultValue="@string/curr_symbol_default"
            android:entries="@array/currency_names"
            android:entryValues="@array/currency_symbols"
            android:key="currency"
            android:title="@string/settings_title_currency" />
        <ListPreference
            android:defaultValue="@string/settings_locale_button_id_next_locale"
            android:entries="@array/settings_locale_button_behavior_names"
            android:entryValues="@array/settings_locale_button_behavior_values"
            android:key="behavior_locale_button"
            android:summary="@string/settings_locale_button_summary"
            android:title="@string/settings_locale_button_title" />
    </PreferenceScreen>

    <!-- Customize -->
    <PreferenceScreen android:title="@string/settings_category_customize_title" >
        <PreferenceScreen
            android:summary="@string/settings_program_keys_summary"
            android:title="@string/settings_program_keys_title" >
            <ListPreference
                android:defaultValue="@string/any_key_action_id_default"
                android:entries="@array/settings_any_key_action_names"
                android:entryValues="@array/settings_any_key_action_values"
                android:key="any_key_action"
                android:title="@string/settings_title_any_key_action" />
            <ListPreference
                android:defaultValue="@string/any_key_long_action_id_default"
                android:entries="@array/settings_any_key_action_names"
                android:entryValues="@array/settings_any_key_action_values"
                android:key="any_key_long_action"
                android:title="@string/settings_title_any_key_long_action" />
            <ListPreference
                android:defaultValue="@string/return_key_long_action_id_default"
                android:entries="@array/settings_any_key_action_names"
                android:entryValues="@array/settings_any_key_action_values"
                android:key="return_key_long_action"
                android:title="@string/settings_title_return_key_long_action" />
        </PreferenceScreen>

        <Preference
            android:key="theme"
            android:selectable="true"
            android:summary="@string/settings_summary_theme"
            android:title="@string/settings_title_theme" />
        <Preference
            android:key="photo_wallpaper"
            android:selectable="true"
            android:summary="@string/settings_summary_photo_wallpaper"
            android:title="@string/settings_title_photo_wallpaper" />

        <PreferenceScreen
            android:key="key_height"
            android:summary="@string/settings_summary_key_height"
            android:title="@string/settings_title_key_height" >
            <Preference
                android:defaultValue="50"
                android:key="portrait_key_height"
                android:title="@string/settings_title_portrait_key_height" />
            <Preference
                android:defaultValue="30"
                android:key="landscape_key_height"
                android:title="@string/settings_title_landscape_key_height" />
        </PreferenceScreen>

        <Preference
            android:defaultValue="16"
            android:key="candidates_height"
            android:summary="@string/settings_summary_candidate_height"
            android:title="@string/settings_title_candidate_height" />
        <Preference
            android:defaultValue="1"
            android:key="keyboard_padding_bottom"
            android:summary="@string/settings_summary_key_bottom_padding_height"
            android:title="@string/settings_title_key_bottom_padding_height" />
    </PreferenceScreen>

    <!-- Typing -->
    <PreferenceScreen
        android:title="@string/settings_category_typing_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="auto_caps"
            android:summary="@string/settings_summary_auto_caps"
            android:title="@string/settings_title_auto_caps" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="smart_spaces"
            android:summary="@string/settings_summary_smart_spaces"
            android:title="@string/settings_title_smart_spaces" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="double_space"
            android:summary="@string/settings_summary_double_space"
            android:title="@string/settings_title_double_space" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="long_press_symbols"
            android:summary="@string/settings_summary_long_press_symbols"
            android:title="@string/settings_title_long_press_symbols" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preview_popup"
            android:title="@string/settings_title_show_key_preview_popups" />
    </PreferenceScreen>

    <!-- Suggestions -->
    <PreferenceScreen android:title="@string/settings_category_suggestions_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_suggestions"
            android:summary="@string/settings_summary_show_suggestions"
            android:title="@string/settings_title_show_suggestions" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="auto_select"
            android:summary="@string/settings_summary_auto_select"
            android:title="@string/settings_title_auto_select" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="include_corrections"
            android:summary="@string/settings_summary_include_corrections"
            android:title="@string/settings_title_include_corrections" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="nextword"
            android:summary="@string/settings_summary_predict_nextword"
            android:title="@string/settings_title_predict_nextword" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="include_contacts"
            android:summary="@string/settings_summary_include_contacts"
            android:title="@string/settings_title_include_contacts" />
        <!--
         <CheckBoxPreference
            android:defaultValue="true"
            android:key="suggestions_always_show"
            android:title="@string/settings_title_suggestions_always_show" 
            android:summary="@string/settings_summary_suggestions_always_show" />        



        -->
    </PreferenceScreen>

    <!-- Feedback -->
    <PreferenceScreen
        android:title="@string/settings_category_feedback_title" >
        <Preference
            android:key="sound_volume"
            android:title="@string/settings_title_sound_key_click" />
        <Preference
            android:key="vibrate"
            android:summary="@string/vibrate_notime"
            android:title="@string/settings_title_vibrate_on_key_press" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="vibrate_on_typo_correction"
            android:summary="@string/settings_summary_vibrate_on_typo_correction"
            android:title="@string/settings_title_vibrate_on_typo_correction" />

        <Preference
            android:key="long_press_duration"
            android:summary=""
            android:title="@string/settings_title_long_press_duration" />
    </PreferenceScreen>
    
    
    
    <PreferenceScreen
        android:title="@string/settings_title_swipe_actions" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="swipe_num_row"
            android:summary="@string/settings_summary_swipe_num_row"
            android:title="@string/settings_title_swipe_num_row" />

        <ListPreference
            android:defaultValue="@string/any_key_action_id_arrow_keypad"
            android:entries="@array/settings_swipe_action_names"
            android:entryValues="@array/settings_swipe_action_values"
            android:key="swipe_left_action"
            android:summary="Arrow keys"
            android:title="@string/settings_title_swipe_left_action" />
        <ListPreference
            android:defaultValue="@string/any_key_action_id_default"
            android:entries="@array/settings_swipe_action_names"
            android:entryValues="@array/settings_swipe_action_values"
            android:key="swipe_right_action"
            android:summary="Voice input"
            android:title="@string/settings_title_swipe_right_action" />
        <ListPreference
            android:defaultValue="@string/swipe_action_id_do_nothing"
            android:entries="@array/settings_swipe_action_names"
            android:entryValues="@array/settings_swipe_action_values"
            android:key="swipe_up_action"
            android:summary="Do nothing"
            android:title="@string/settings_title_swipe_up_action" />
        <ListPreference
            android:defaultValue="@string/swipe_action_id_do_nothing"
            android:entries="@array/settings_swipe_action_names"
            android:entryValues="@array/settings_swipe_action_values"
            android:key="swipe_down_action"
            android:summary="Do nothing"
            android:title="@string/settings_title_swipe_down_action" />
    </PreferenceScreen>

    <Preference
        android:key="shortcut"
        android:title="@string/settings_title_shortcut" />

    <PreferenceScreen
        android:title="@string/settings_category_advanced_title" >

        <!-- Speech Input -->
        <PreferenceCategory
            android:key="speech_input"
            android:title="@string/settings_category_speech_input" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="speech_input_closest_match"
                android:summary="@string/settings_summary_closest_match"
                android:title="@string/settings_title_closest_match" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/settings_category_debug" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="debug_mode"
                android:summary="@string/settings_summary_debug_mode"
                android:title="@string/settings_title_debug_mode" />

            <Preference
                android:key="submit_logs"
                android:selectable="true"
                android:summary="@string/settings_summary_submit_logs"
                android:title="@string/settings_title_submit_logs" />
        </PreferenceCategory>

        <Preference
            android:key="coupon"
            android:selectable="true"
            android:summary="@string/settings_summary_enter_coupon"
            android:title="@string/settings_title_enter_coupon_code" />
    </PreferenceScreen>

</PreferenceScreen>