<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/page_background"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <!-- TypeSmart logo -->

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/title_logo" />

        
        <!-- Complete setup -->
        
        <LinearLayout
            android:id="@+id/homeInstall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home_label_install"
                android:textColor="@color/label_text"
                android:textSize="@dimen/home_status_font_size" >

            </TextView>

            <Button
                android:id="@+id/btn_install"
                style="@style/btn_std"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/home_btn_install" />

        </LinearLayout>

        
        <!-- Enable TK -->

        <LinearLayout
            android:id="@+id/homeEnableTK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/homeLabelEnable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home_label_enable"
                android:textColor="@color/label_text"
                android:textSize="@dimen/home_status_font_size"
                />

            <Button
                android:id="@+id/btn_enable"
                style="@style/btn_std"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/home_btn_activate" />

        </LinearLayout>

        <!-- Choose default keyboard -->

        <LinearLayout
            android:id="@+id/homeSelectIME"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/homeLabelSelectIme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home_label_select_ime"
                android:textColor="@color/label_text"
                android:textSize="@dimen/home_status_font_size" />

            <Button
                android:id="@+id/btn_set_default"
                style="@style/btn_std"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/home_btn_select_ime" />

        </LinearLayout>

        <!-- All done! -->

        <LinearLayout
            android:id="@+id/homeDone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/homeLabelDone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/home_label_done"
                android:textColor="@color/label_text"
                android:textSize="@dimen/home_status_font_size" />

        </LinearLayout>

        <!-- Main buttons -->

            <!-- Settings -->

            <Button
                android:id="@+id/btn_settings"
                style="@style/btn_home"
                android:layout_marginTop="5dp"
                android:drawableTop="@drawable/home_btn_settings"
                android:text="@string/home_btn_settings" />

            <!-- About -->

            <Button
                android:id="@+id/btn_about"
                style="@style/btn_home"
                android:layout_marginTop="5dp"
                android:drawableTop="@drawable/home_btn_about"
                android:text="@string/home_btn_about" />


        <!-- FOR DEVELOPMENT PURPOSES ONLY
        <EditText
            android:id="@+id/dev_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/heading_font_size" />
		 -->

		 
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:weightSum="3" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    style="@style/btn_home_icon"
                    android:onClick="onClickFacebook"
                    android:src="@drawable/home_icn_facebook" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <ImageButton
                    style="@style/btn_home_icon"
                    android:onClick="onClickTwitter"
                    android:src="@drawable/home_icn_twitter" />
            </FrameLayout>
        </LinearLayout>


        <!--&lt;!&ndash; Privacy &ndash;&gt;-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:gravity="center"-->
            <!--android:textColor="@color/label_text"-->
            <!--android:textSize="@dimen/home_fine_print_font_size"-->
            <!--android:text="@string/home_label_privacy"/>-->

        <!-- Comet logo -->

        <include layout="@layout/comet_logo" />
    </LinearLayout>

</ScrollView>